--- a/views/finish.ejs
+++ b/views/finish.ejs
@@ -5,6 +5,6 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>結帳成功</h1>
+    <h1><%= status %></h1>
   </body>
 </html>
